--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
+    "ecstatic": "^4.1.2",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
